@@ -191,7 +191,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.3</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <argLine>--enable-preview -Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
             
